# The-Knowledge-Graph-Support-Engineer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py  ui.py
src/agents/: llm_gateway.py  support_agent.py
src/database/: graph_store.py  hybrid_retriever.py  vector_store.py
src/evaluation/: evaluate.py  golden_dataset.json
src/ingestion/: docs_loader.py  github_loader.py
src/utils/: logging_config.py
tests/: test_ingestion.py  test_retriever.py
